<resources>
    <string name="app_name">Edu Masters</string>
    <string name="welcome_back">Welcome Back!</string>
    <!--    <string name="login_to_continue">Login to continue</string>-->
    <!--    <string name="email">Email</string>-->
    <!--    <string name="password">Password</string>-->
    <string name="login">Login</string>
    <!--    <string name="create_new_account">Create New Account</string>-->
    <string name="add_image">Add Image</string>
    <!--    <string name="name">Name</string>-->
    <!--    <string name="confirm_password">Confirm Password</string>-->
    <string name="register">Register</string>
    <string name="username_hint">Username</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="login_here">Login Here!</string>
    <string name="register_here">Register Here!</string>
    <string name="dont_have_account">Don\'t Have an Account?</string>
    <string name="forgot_password">Forgot Password?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_email_to_reset_password">Enter your email to reset password</string>
    <string name="send_email_to_reset_password">Send Email To Reset Password</string>
    <string name="submit">Submit</string>
    <string name="default_web_client_id">892989105581-8mugpktlflf0f4uv5qc6d5rokndq3vpp.apps.googleusercontent.com</string>
    <string-array name="testing_name">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
        <item>60</item>
        <item>61</item>
        <item>62</item>
        <item>63</item>
        <item>64</item>
        <item>65</item>
        <item>66</item>
        <item>67</item>
        <item>68</item>
        <item>69</item>
        <item>70</item>
        <item>71</item>
        <item>72</item>
        <item>73</item>
        <item>74</item>
        <item>75</item>
        <item>76</item>
        <item>77</item>
        <item>78</item>
        <item>79</item>
        <item>80</item>
        <item>81</item>
        <item>82</item>
        <item>83</item>
        <item>84</item>
        <item>85</item>
        <item>86</item>
        <item>87</item>
        <item>88</item>
        <item>89</item>
        <item>90</item>
        <item>91</item>
        <item>92</item>
        <item>93</item>
        <item>94</item>
        <item>95</item>
        <item>96</item>
        <item>97</item>
        <item>98</item>
        <item>99</item>
        <item>100</item>
        <item>101</item>

    </string-array>
    <string-array name="testing_mark">
        <item>100</item>
        <item>200</item>
        <item>300</item>
        <item>400</item>
        <item>500</item>
        <item>600</item>
        <item>700</item>
        <item>800</item>
        <item>900</item>
        <item>1000</item>
        <item>1100</item>
        <item>1200</item>
        <item>1300</item>
        <item>1400</item>
        <item>1500</item>
        <item>1600</item>
        <item>1700</item>
        <item>1800</item>
        <item>1900</item>
        <item>2000</item>
        <item>2100</item>
        <item>2200</item>
        <item>2300</item>
        <item>2400</item>
        <item>2500</item>
        <item>2600</item>
        <item>2700</item>
        <item>2800</item>
        <item>2900</item>
        <item>3000</item>
        <item>3100</item>
        <item>3200</item>
        <item>3300</item>
        <item>3400</item>
        <item>3500</item>
        <item>3600</item>
        <item>3700</item>
        <item>3800</item>
        <item>3900</item>
        <item>4000</item>
        <item>4100</item>
        <item>4200</item>
        <item>4300</item>
        <item>4400</item>
        <item>4500</item>
        <item>4600</item>
        <item>4700</item>
        <item>4800</item>
        <item>4900</item>
        <item>5000</item>
        <item>5100</item>
        <item>5200</item>
        <item>5300</item>
        <item>5400</item>
        <item>5500</item>
        <item>5600</item>
        <item>5700</item>
        <item>5800</item>
        <item>5900</item>
        <item>6000</item>
        <item>6100</item>
        <item>6200</item>
        <item>6300</item>
        <item>6400</item>
        <item>6500</item>
        <item>6600</item>
        <item>6700</item>
        <item>6800</item>
        <item>6900</item>
        <item>7000</item>
        <item>7100</item>
        <item>7200</item>
        <item>7300</item>
        <item>7400</item>
        <item>7500</item>
        <item>7600</item>
        <item>7700</item>
        <item>7800</item>
        <item>7900</item>
        <item>8000</item>
        <item>8100</item>
        <item>8200</item>
        <item>8300</item>
        <item>8400</item>
        <item>8500</item>
        <item>8600</item>
        <item>8700</item>
        <item>8800</item>
        <item>8900</item>
        <item>9000</item>
        <item>9100</item>
        <item>9200</item>
        <item>9300</item>
        <item>9400</item>
        <item>9500</item>
        <item>9600</item>
        <item>9700</item>
        <item>9800</item>
        <item>9900</item>
        <item>10000</item>
        <item>10100</item>

    </string-array>
    <string-array name="feedback_types">
        <item>General Feedback</item>
        <item>Bug Report</item>
        <item>Feature Request</item>
        <item>Suggestion</item>
        <item>Other</item>
    </string-array>

</resources>