<?xml version="1.0" encoding="utf-8"?>
<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_register_gradient"
    tools:context=".activities.ForgotPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="@dimen/_16sdp">

        <!-- App Logo or Title -->
        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/app_name"
            android:textColor="@color/purple_500"
            android:textSize="@dimen/_24ssp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:layout_marginBottom="@dimen/_16sdp" />

        <!-- Sign Up Title -->
        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/forgot_password"
            android:textSize="@dimen/_18ssp"
            android:fontFamily="sans-serif"
            android:textColor="@color/black"
            android:layout_marginBottom="@dimen/_30sdp"
            />



        <!-- Email Input -->
        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_48sdp"
            android:hint="@string/enter_your_email_to_reset_password"
            android:padding="@dimen/_12sdp"

            android:background="@drawable/edit_text_background"
            android:layout_marginBottom="@dimen/_12sdp"
            android:inputType="textEmailAddress" />






        <!-- Login Button -->
        <Button
            android:id="@+id/btn_sendEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_48sdp"
            android:text="@string/submit"
            android:textSize="@dimen/_14ssp"
            android:layout_marginTop="@dimen/_100sdp"
            android:backgroundTint="@color/purple_500"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-medium"
            android:layout_marginBottom="@dimen/_16sdp" />






        <TextView
            android:id="@+id/tv_dont_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_account"
            android:textSize="@dimen/_14ssp"
            android:fontFamily="sans-serif"
            android:textColor="@color/black"
            android:gravity="center" />
        <TextView
            android:id="@+id/tv_register_here"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_here"
            android:textSize="@dimen/_14ssp"
            android:fontFamily="sans-serif"
            android:textColor="@color/blue"
            android:gravity="center" />


    </LinearLayout>
</ScrollView>
