<?xml version="1.0" encoding="utf-8"?>
<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_register_gradient"
    tools:context=".activities.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="@dimen/_16sdp">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/appIcon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_app_launcher_round"
            android:layout_marginBottom="20dp"
            app:riv_corner_radius="40dp"
            app:riv_oval="true"
            />

        <!-- App Logo or Title -->
        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/purple_500"
            android:textSize="@dimen/_24ssp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:layout_marginBottom="@dimen/_16sdp" />

        <!-- Sign Up Title -->
        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="@dimen/_18ssp"
            android:fontFamily="sans-serif"
            android:textColor="@color/black"
            android:layout_marginBottom="@dimen/_12sdp" />

        <!-- Username Input -->
        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_48sdp"
            android:hint="@string/username_hint"
            android:padding="@dimen/_12sdp"
            android:background="@drawable/edit_text_background"
            android:layout_marginBottom="@dimen/_12sdp" />

        <!-- Email Input -->
        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_48sdp"
            android:hint="@string/email_hint"
            android:padding="@dimen/_12sdp"
            android:background="@drawable/edit_text_background"
            android:layout_marginBottom="@dimen/_12sdp"
            android:inputType="textEmailAddress" />

        <!-- Password Input -->
        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_48sdp"
            android:hint="@string/password_hint"
            android:padding="@dimen/_12sdp"
            android:background="@drawable/edit_text_background"
            android:layout_marginBottom="@dimen/_12sdp"
            android:inputType="textPassword" />

        <!-- Confirm Password Input -->
        <EditText
            android:id="@+id/et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_48sdp"
            android:hint="@string/confirm_password_hint"
            android:padding="@dimen/_12sdp"
            android:background="@drawable/edit_text_background"
            android:layout_marginBottom="@dimen/_16sdp"
            android:inputType="textPassword" />

        <!-- Sign Up Button -->
        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_48sdp"
            android:text="@string/register"
            android:textSize="@dimen/_14ssp"
            android:backgroundTint="@color/purple_500"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-medium"
            android:layout_marginBottom="@dimen/_16sdp" />




        <!-- Already Have an Account -->
        <TextView
            android:id="@+id/tv_already_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_account"
            android:textSize="@dimen/_14ssp"
            android:fontFamily="sans-serif"
            android:textColor="@color/black"
            android:gravity="center" />
        <TextView
            android:id="@+id/tv_login_here"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_here"
            android:textSize="@dimen/_14ssp"
            android:fontFamily="sans-serif"
            android:textColor="@color/blue"
            android:gravity="center" />


    </LinearLayout>
</ScrollView>
